2023-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/gen-tiff-images/genimages: Add support for
	writing uncompressed ("none"), rle, lzw, zip, zstd, and lzma
	compressed variants since these compressors do not have peculiar
	requirements.  With this change 5568 files are generated!

	* coders/png.c (ReadMNGImage): Can not use interpolation for first
	pixel in MNG X_method 5.  Fixes oss-fuzz issue 31109
	"graphicsmagick:coder_MNG_fuzzer: Heap-buffer-overflow in
	ReadMNGImage" and oss-fuzz issue 58381
	"graphicsmagick:coder_MNG_fuzzer: Heap-buffer-overflow in
	ReadMNGImage".

2023-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Verify that the bits per sample,
	samples per pixel, and photometric are suitable for the claimed
	compressor.

	* coders/bmp.c (ReadBMPImage): Do not decode primaries or gamma
	unless colorspace is LCS_CALIBRATED_RGB.

2023-05-13  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/png.c: Expose gama value to the optional log.

2023-05-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* utilities/tests/gen-tiff-images/genimages: Write one-bit grey
	(monochrome) images.  Write miniswhite images.

	* coders/tiff.c (WriteTIFFImage): Support '-define
	tiff:photometric=minisblack' and '-define
	tiff:photometric=miniswhite' to be able to adjust the sense used
	when writing bilevel TIFF images.  Adjust the heuristics used to
	select 'miniswhite' to hopefully preserve the user's intent as
	much as possible, while obeying codec requirements.

2023-05-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.tap: Add TopoL to rwfile tests.

2023-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/topol.c (RegisterTOPOLImage): Set adjoin to MagickFalse.

2023-05-06  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: Fix situation when GetBlobSize returns negative value.

2023-05-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
